<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Google I/O 2010</string>

    <string name="description_logo">Google I/O 2010</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>

    <string name="title_now_playing">Now Playing</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_starred">Starred</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_vendors">Sandbox</string>
    <string name="title_map">Map</string>
    <string name="title_notes">Notes</string>
    <string name="title_note_edit">Edit note</string>

    <string name="title_session_tracks">Session tracks</string>
    <string name="title_vendor_tracks">Sandbox tracks</string>

    <string name="title_share">Share using</string>

    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \'<xliff:g id="query">%1$s</xliff:g>\'</string>

    <string name="btn_schedule">Schedule</string>
    <string name="btn_map">Map</string>
    <string name="btn_sessions">Sessions</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_vendors">Sandbox</string>
    <string name="btn_notes">My Notes</string>

    <string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>

    <string name="session_subtitle"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>
    <string name="session_moderator_status"><xliff:g id="questions">%1$s</xliff:g> questions submitted and <xliff:g id="votes">%2$s</xliff:g> votes cast.</string>

    <string name="empty_sessions">No sessions found</string>
    <string name="empty_session_detail">No session details found</string>
    <string name="empty_vendors">No sandbox results found</string>
    <string name="empty_notes">No notes found</string>
    <string name="empty_search">No search results found</string>

    <string name="session_summary">Summary</string>
    <string name="session_notes">Notes</string>
    <string name="session_moderator">Moderator</string>
    <string name="session_interact">Interact</string>
    <string name="session_requirements">Requirements</string>
    <string name="session_speakers">Speakers</string>

    <string name="track_summary">Summary</string>
    <string name="track_sessions">Sessions</string>
    <string name="track_vendors">Sandbox</string>

    <string name="search_sessions">Sessions</string>
    <string name="search_vendors">Sandbox</string>

    <string name="starred_sessions">Sessions</string>
    <string name="starred_vendors">Sandbox</string>

    <string name="search_label">Google I/O</string>
    <string name="search_hint">Session keywords</string>

    <string name="share_template">Checking out \'<xliff:g id="title">%1$s</xliff:g>\' at Google #io2010 <xliff:g id="hashtag">%2$s</xliff:g></string>
    <string name="share_notes">Exported notes from Google I/O 2010</string>

    <string name="moderator_header">Moderator</string>
    <string name="moderator_summary">Use Moderator to ask questions during this session, and vote up/down other questions.</string>
    <string name="wave_header">Wave</string>
    <string name="wave_summary">Use Wave to collaborate in real-time with others during this session.</string>

    <string name="dialog_moderator_title">Google Moderator</string>
    <string name="dialog_moderator_message">The official Google Moderator app is available in Market, would you like to install it or continue using a normal browser?</string>

    <string name="dialog_moderator_web">Use Browser</string>
    <string name="dialog_moderator_market">Visit Market</string>

    <string name="dialog_wave_title">Google Wave</string>
    <string name="dialog_wave_message">The Google Wave mobile interface is still in beta, and using a desktop or laptop is recommended for the best experience.\n\nContinue to Google Wave anyway?</string>

    <string name="speaker_template"><xliff:g id="name">%1$s</xliff:g>, <xliff:g id="company">%2$s</xliff:g></string>

    <string name="note_save">Save</string>
    <string name="note_discard">Discard</string>

    <string name="note_create">Create new note</string>
    <string name="note_hint">Enter note</string>

    <string name="note_discard_title">Discard note?</string>
    <string name="note_discard_confirm">Are you sure you want to discard this note, deleting any contents?</string>

    <string name="note_before"><xliff:g id="time">%1$s</xliff:g> before session</string>
    <string name="note_into"><xliff:g id="time">%1$s</xliff:g> into session</string>
    <string name="note_after"><xliff:g id="time">%1$s</xliff:g> after session</string>

    <string name="now_playing_loading">Looking up nearby sessions\u2026</string>
    <string name="now_playing_no_results">No sessions nearby.</string>
    <string name="now_playing_enable_wifi">Tap here to enable Wi-Fi for indoor location.</string>

    <plurals name="now_playing_countdown">
        <item quantity="zero"><xliff:g id="remaining_time">%2$s</xliff:g></item>
        <item quantity="one"><xliff:g id="number_of_days">%1$s</xliff:g> day, <xliff:g id="remaining_time">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="number_of_days">%1$s</xliff:g> days, <xliff:g id="remaining_time">%2$s</xliff:g></item>
    </plurals>

    <string name="now_playing_before_subtitle">Countdown to Google I/O!</string>
    <string name="now_playing_after_title">See you next year!</string>
    <string name="now_playing_after_subtitle">Thanks for tuning in.</string>

    <string name="permission_write">Modify Google I/O schedule data</string>

</resources>
